<resources>
    <string name="app_name">Handy Man</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="Base_URL">http://192.168.1.4/handy_man/api/</string>

    <string-array name="year_array">
        <item>None</item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Teacher</item>
    </string-array>
</resources>
